# wingpanel-indicator-places

./: README.md  meson.build
data/: 10-enable-mount.rules  meson.build  xplaces.gresource.xml
debian/: changelog  control  copyright  rules
po/: LINGUAS  ru.po  xplaces-indicator.pot
src/: Indicator.vala
src/Widgets/: BookmarksItem.vala  ListItem.vala  MountItem.vala  Popover.vala  VolumeItem.vala
